--- a/build.gradle
+++ b/build.gradle
@@ -43,5 +43,6 @@ dependencies {
 application {       
    // TODO: Specify the fully-qualified name of the class 
    //       that contains the main method to be executed.
+   // mainClass = 'edu.vanier.waveSim.tests.Driver'
    mainClass = 'edu.vanier.waveSim.MainApp'
 }
