--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,6 @@ dependencies {
 application {       
    // TODO: Specify the fully-qualified name of the class 
    //       that contains the main method to be executed.
-    mainClass = 'edu.vanier.waveSim.ui.Driver'
-   //mainClass = 'edu.vanier.waveSim.MainApp'
+   //mainClass = 'edu.vanier.waveSim.ui.Driver'
+   mainClass = 'edu.vanier.waveSim.MainApp'
 }
